# khi

./: .gitignore  .mcp.json  BUILD.md  CLAUDE.md  PRD.md  README.md  build.sh  cover-import.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest-setup.ts
.claude/: settings.local.json
.ralphy/: config.yaml  progress.txt
coverage/: clover.xml  coverage-final.json  index.html
coverage/components/: BookCard.svelte.html  LibraryView.svelte.html  index.html
coverage/stores/: index.html  library.svelte.ts.html
coverage/utils/: index.html  markdown.ts.html
khi-ui-redesign/: ASSETS.md  README.md  UI-SPEC.md
khi-ui-redesign/react-reference/: App.tsx
khi-ui-redesign/react-reference/components/: BookHighlights.tsx  BooksLibrary.tsx  ImportingScreen.tsx  KoboIcon.tsx  NoKoboScreen.tsx  SettingsModal.tsx
scripts/: sync-version.js
src/: app.css  app.html  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/covers/: mod.rs
src-tauri/src/db/: kobo.rs  mod.rs
src-tauri/src/device/: mod.rs  monitor.rs
src-tauri/src/export/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/utils/: logger.rs
src/lib/: contract.test.ts  menu.ts  types.ts
src/lib/components/: AppLayout.svelte  BookCard.svelte  BookCard.svelte.test.ts  BookDetailsView.svelte  BookDetailsView.svelte.test.ts  BookListItem.svelte  BookListItem.svelte.test.ts  Button.svelte  CustomCheckbox.svelte  CustomRadio.svelte  EmptyStateNoDevice.svelte  HighlightItem.svelte  HighlightItem.svelte.test.ts  KoboIcon.svelte  (+10 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+20 files in other folders)
