[package]
name = "khi"
version = "0.1.0"
description = "A macOS app to export Kobo highlights to Markdown"
authors = ["you"]
edition = "2021"

[lib]
name = "khi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
zip = "0.6"
image = "0.24"
sha2 = "0.10"
notify = "6.0"
regex = "1.10"
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSResponder", "NSPanel", "NSWindow"] }
objc2-foundation = { version = "0.2" }
dispatch2 = "0.3"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"

