[package]
name = "khi"
version = "1.1.0"
description = "A macOS app to export Kobo highlights to Markdown"
authors = ["you"]
edition = "2021"

[lib]
name = "khi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
zip = "0.6"
image = "0.24"
sha2 = "0.10"
notify = "6.0"
regex = "1.10"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"

